--- a/bin/views/layout.pug
+++ b/bin/views/layout.pug
@@ -2,6 +2,6 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
     body
         block content
