➕ Add cors to enable cross-origin requests

--- a/bin/views/index.pug
+++ b/bin/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     .container.mt-3.mt-sm-5
         h1= title
-        a(href="#") Github Repository
+        a(href="https://github.com/yamankatby/todolist-backend-app") Github Repository
         .card.mt-3
             .card-header
                 | Register a new account
